--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.springsecurity.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
-mybatis.type-handlers-package=com.example.springsecurity.utils.UUIDTypeHandler
+mybatis.type-handlers-package=com.example.springsecurity.utils
 
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
